--- a/ironcage/templates/ironcage/base.html
+++ b/ironcage/templates/ironcage/base.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://2018.pyconuk.org/static/css/pyconuk.css">
   <link rel="stylesheet" href="{% static 'tickets/tickets.css' %}" />
   <link rel="stylesheet" href="{% static 'ironcage/ironcage.css' %}" />
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-plugins/bootstrap-datepicker/css/bootstrap-datepicker3.css' %}" />
   <title>{{ title|default:"PyCon UK 2018 Registration Office" }}</title>
