Make the calendar icon have a pointer cursor

--- a/ironcage/static/ironcage/ironcage.css
+++ b/ironcage/static/ironcage/ironcage.css
@@ -107,6 +107,7 @@ div.is-invalid > .invalid-feedback {
   position: absolute;
   bottom: 12px;
   right: 12px;
+  cursor: pointer;
 }
 
 .schedule-table td a {
