Change wording on schedule

--- a/schedule/templates/schedule/schedule.html
+++ b/schedule/templates/schedule/schedule.html
@@ -9,11 +9,8 @@
         <h2>Subject to change</h2>
       </div>
       <div class="card-body">
-        <p>Our schedule is subject to change, however things should only move within the same day.</p>
-        <p>
-          You can help us by clicking on the calendar icon on the items you wish to see, which will highlight them in yellow.<br>
-          This will allow us to gauge which talk needs which size room.
-        </p>
+        <p>The schedule is subject to change. However, we aim to keep this to a minimum and to avoid day changes.</p>
+        <p>{% if request.user.is_anonymous %}When logged in, y{% else %}Y{% endif %}ou can use the calendar icon on each session to indicate which ones you’re particularly interested in attending. This will help us improve the scheduling and room allocations.</p>
       </div>
     </div>
     {% if not request.user.is_anonymous %}
