Add emoji warning

--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -99,6 +99,12 @@
                   <small class="form-text text-muted">You may choose to display your Twitter username on your badge. This will be prefixed with @. Optional.</small>
                 </div>
               </div>
+              <hr>
+              <div class="row">
+                <div class="col">
+                  <small class="text-muted">Most unicode characters are supported however Emoji are not. </small>
+                </div>
+              </div>
             </div>
             <div class="col-4">
               <label>Badge Preview</label>
