Change in collecting invites to reduce user confusion

--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -47,6 +47,6 @@
 </form>
 
 {# Assumes you setup the password_reset view in your URLconf #}
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+<p><a href="{% url 'password_reset' %}">Lost password?</a></p><p><a href="{% url 'register' %}">Don't have an account?</a></p>
 
 {% endblock %}
