Remove all the old email addresses

--- a/ironcage/templates/ironcage/base.html
+++ b/ironcage/templates/ironcage/base.html
@@ -111,6 +111,7 @@
       </div>
       <div class="container pt-1 pb-3 clearfix">
         <p class="text-center">PyCon UK is a&nbsp;<a href="//2018.pyconuk.org/contact/" class="">volunteer-organised conference</a>, staged by and on behalf of the Python community in the UK.</p>
+        <p class="text-center">PyCon is a trademark of <a href="https://www.python.org/psf/">the Python Software Foundation</a>.</p>
       </div>
     </footer>
   </body>
