--- a/ironcage/templates/ironcage/index.html
+++ b/ironcage/templates/ironcage/index.html
@@ -73,11 +73,24 @@
             <a href="{% url 'extras:new_children_order' %}">Order more Young Coders' day tickets</a>
           {% endif %}
         {% endif %}
+        <hr>
+        {% if dinner|length == 0 %}
+          <a href="{% url 'extras:new_dinner_order' 'CH' %}">Order Conference Dinner tickets</a><br>
+          <a href="{% url 'extras:new_dinner_order' 'CL' %}">Order Clink Dinner tickets</a>
+        {% else %}
+          <a href="{% url 'extras:dinner_ticket' %}">View your Dinner ticket{{ dinner|pluralize }}</a>
+          <hr>
+          <a href="{% url 'extras:new_dinner_order' 'CH' %}">Order more Conference Dinner tickets</a><br>
+          <a href="{% url 'extras:new_dinner_order' 'CL' %}">Order more Clink Dinner tickets</a>
+        {% endif %}
 
-        {% if childrensday %}
+        {% if childrensday or dinner %}
           <hr>
           View your orders:
           <ul>
+            {% for order in dinner %}
+              <li><a href="{% url 'orders:order' order.order_id %}">Order {{ order.order_id }}</a> ({{ order.brief_summary }})</li>
+            {% endfor %}
             {% for order in childrensday %}
               <li><a href="{% url 'orders:order' order.order_id %}">Order {{ order.order_id }}</a> ({{ order.brief_summary }})</li>
             {% endfor %}
