Test updating of dinner tickets

--- a/extras/templates/extras/dinner/_edit_ticket_form.html
+++ b/extras/templates/extras/dinner/_edit_ticket_form.html
@@ -4,5 +4,5 @@
   {% csrf_token %}
   {% include './_dinner_order_form.html' %}
 
-  <input type="submit" value="Place my order" class="btn btn-primary" />
+  <input type="submit" value="Update your ticket" class="btn btn-primary" />
 </form>
