Allow amounts inc VAT that don’t end in .00

--- a/extras/templates/extras/dinner/_ticket_details.html
+++ b/extras/templates/extras/dinner/_ticket_details.html
@@ -17,6 +17,6 @@
   </tr>
   <tr>
     <th>Cost (incl. VAT)</th>
-    <td>&pound;{{ ticket.cost_incl_vat }}</td>
+    <td>&pound;{{ ticket.cost_incl_vat|floatformat:2 }}</td>
   </tr>
 </table>
