--- a/extras/templates/extras/dinner/_order_form.html
+++ b/extras/templates/extras/dinner/_order_form.html
@@ -35,7 +35,7 @@
           <b>Total cost (incl. VAT)</b>
         </div>
         <div class="col col-9 col-md-9">
-          &pound;{{ ticket_cost }}
+          &pound;{{ ticket_cost|floatformat:2 }}
         </div>
       </div>
       <div class="row">
