--- a/extras/templates/extras/dinner/_order_form.html
+++ b/extras/templates/extras/dinner/_order_form.html
@@ -41,7 +41,7 @@
       <div class="row">
         <div class="col">
           {% if user_dinners == 0 and request.user.is_contributor %}
-            <input type="submit" value="Claim my free ticket" class="btn btn-primary" />
+            <input type="submit" value="Claim my complimentary ticket" class="btn btn-primary" />
           {% else %}
             <input type="submit" value="Place my order" class="btn btn-primary" />
           {% endif %}
