--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -264,13 +264,13 @@
 {% endblock %}
 
 {% block json_data %}
-var isContributor = "{{ is_contributor|safe }}" == "True";
-var isOrganiser = "{{ is_organiser|safe }}" == "True";
-var name = "{{ request.user.name|safe }}";
-var snake = "{{ request.user.badge_snake_colour|safe }}";
-var extras = "{{ request.user.badge_snake_extras|safe }}";
-var company = "{% if request.user.badge_company %}{{ request.user.badge_company|safe }}{% endif %}";
-var twitter = "{{ request.user.badge_twitter|safe }}";
-var pronoun = "{{ request.user.badge_pronoun|safe }}";
-var ticketRate = "{{ ticket_rate|safe }}";
+var isContributor = "{{ is_contributor }}" == "True";
+var isOrganiser = "{{ is_organiser }}" == "True";
+var name = "{{ request.user.name }}";
+var snake = "{{ request.user.badge_snake_colour }}";
+var extras = "{{ request.user.badge_snake_extras }}";
+var company = "{% if request.user.badge_company %}{{ request.user.badge_company }}{% endif %}";
+var twitter = "{{ request.user.badge_twitter }}";
+var pronoun = "{{ request.user.badge_pronoun }}";
+var ticketRate = "{{ ticket_rate }}";
 {% endblock %}
