Profile warnings to hopefully save me some time and energy

--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -86,7 +86,7 @@
                 </div>
                 <div class="col-8">
                   {% bootstrap_field form.badge_pronoun layout='inline' %}
-                  <small class="form-text text-muted">You may choose to display your pronouns on your badge - for example he/him or they/them. Optional.</small>
+                  <small class="form-text text-muted">You may choose to display your pronouns on your badge - for example he/him or they/them. Optional. Non-pronouns will not be printed.</small>
                 </div>
               </div>
               <hr>
@@ -102,7 +102,7 @@
               <hr>
               <div class="row">
                 <div class="col">
-                  <small class="text-muted">Most unicode characters are supported however Emoji are not. </small>
+                  <small class="text-muted">Most unicode letters are supported (eg &#321;, &iuml;, &#259;) however graphics and emoji are not.</small>
                 </div>
               </div>
             </div>
