Must be over 18 to join the UKPA

--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -190,6 +190,11 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="col">
+                <small class="form-text text-muted">You must be over the age of 18 to join the UKPA.</small>
+            </div>
+          </div>
         </div>
       </div>
       {% endif %}
