--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -35,6 +35,7 @@
         <div class="card-header"><h2>Badge Information</h2></div>
         <div class="card-body">
           <div class="row">
+            {% if not badge_editing_closed %}
             <div class="col-8">
               <div class="row">
                 <div class="col-4">
@@ -106,6 +107,7 @@
                 </div>
               </div>
             </div>
+            {% endif %}
             <div class="col-4">
               <label>Badge Preview</label>
               <object id="badge" data="/static/accounts/website_badge.svg" type="image/svg+xml" width="100%" style="border: 1px solid black; border-radius: 10px"></object>
