--- a/extras/templates/extras/dinner/_ticket_details.html
+++ b/extras/templates/extras/dinner/_ticket_details.html
@@ -9,7 +9,8 @@
   </tr>
   <tr>
     <th>Main Course</th>
-    <td>{{ ticket.item.get_main_display }}</td>
+    <td>
+        <p><strong>On Sunday only, Pork will be replaced by: Barrel of braised shin of beef, Roast Shallot, Smoky Potato Rosti, Thyme Jus</strong></p>{{ ticket.item.get_main_display }}</td>
   </tr>
   <tr>
     <th>Dessert</th>
